Fix test and remove unnecessary fields from models