@@ -2,10 +2,13 @@ package com.weather.discordweather;
 
 import com.weather.discordweather.client.openweathermap.OpenWeatherMapClient;
 import com.weather.discordweather.client.openweathermap.model.CurrentWeatherForecast;
+import com.weather.discordweather.client.openweathermap.model.DailyWeatherForecast;
 import com.weather.discordweather.client.openweathermap.model.OneCallResponse;
-import com.weather.discordweather.client.openweathermap.model.WeatherAlert;
+import com.weather.discordweather.client.openweathermap.model.TemperatureForecast;
 import com.weather.discordweather.client.openweathermap.model.WeatherCondition;
 import com.weather.discordweather.controller.WeatherController;
+import com.weather.discordweather.model.DiscordWeatherForecast;
+import com.weather.discordweather.model.DiscordWeatherForecastConverter;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -20,7 +23,6 @@ import org.springframework.http.HttpStatus;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -103,15 +105,23 @@ public class WeatherControllerTest {
     public void getWeatherValid() {
       OneCallResponse callResponse = new OneCallResponse(
           1,
-          new CurrentWeatherForecast(1, 1, 1, 1.0f, 1.0f, 1, 1, Optional.of(1.0f),
-              List.of(new WeatherCondition("Valid")),
-              List.of(new WeatherAlert("Name", "Event", 1, 1, "Test", Collections.emptyList()))),
-          Collections.emptyList(), Collections.emptyList());
+          new CurrentWeatherForecast(1635447600, 1635429842, 1635469291, 63.9f, 59,
+              List.of(new WeatherCondition("clear sky")),
+              Collections.emptyList()),
+          Collections.emptyList(),
+          List.of(new DailyWeatherForecast(1635447600,
+              1635429842,
+              1635469291,
+              new TemperatureForecast(76.93f, 63.9f),
+              36,
+              List.of(new WeatherCondition("clear sky")),
+              Collections.emptyList())));
+      DiscordWeatherForecast forecast = DiscordWeatherForecastConverter.convert(callResponse);
       Mockito.when(client.getWeather(33.0, 80.0)).thenReturn(callResponse);
       var controller = new WeatherController(client);
       var response = controller.weather(33.0, 80.0);
       assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-      assertThat(response.getBody()).isEqualTo(callResponse);
+      assertThat(response.getBody()).isEqualTo(forecast);
     }
   }
 }
